<resources>
    <string name="app_name">My Bicycle</string>
    <string name="title_activy_main">Vintage bicycle</string>
    <string name="colors_activity_main">Color</string>
    <string name="btn_S_activity_main">S</string>
    <string name="btn_M_activity_main">M</string>
    <string name="btn_L_activity_main">L</string>
    <string name="btn_XL_activity_main">XL</string>
    <string name="description_activity_main">Description</string>
    <string name="added_to_car">Added to car</string>
    <string name="item_already_added">Already added to car</string>
    <string name="ok_no_more">Ok no more :c</string>
    <string name="btn_car">Add to car</string>
    <string name="measurement_activity_main">Measurement</string>
    <string name="description_text_activity_main">Dissuade ecstatic and properly saw entirely sir why laughter endeavor.
        In on my jointure horrible margaret suitable he followed speedily.
        Indeed vanity excuse or mr lovers of on. By offer scale an stuff. Blush be sorry no sight.
        Sang lose of hour then he left find.
    </string>
    <string name="measurement_text_activity_main"> Made last it seen went no just when of by. Occasional entreaties comparison
        me difficulty so themselves. At brother inquiry of offices without do my service. As particular to companions at sentiments.
        Weather however luckily enquire so certain do. Aware did stood was day under ask. Dearest affixed enquire on explain opinion he.
        Reached who the mrs joy offices pleased. Towards did colonel article any parties.
        Certainly elsewhere my do allowance at. The address farther six hearted hundred towards husband.
        Are securing off occasion remember daughter replying. Held that feel his see own yet. Strangers ye
        to he sometimes propriety in. She right plate seven has. Bed who perceive judgment did marianne.
        Dissuade ecstatic and properly saw entirely sir why laughter endeavor. In on my jointure horrible margaret
        suitable he followed speedily. Indeed vanity excuse or mr lovers of on. By offer scale an stuff. Blush be
        sorry no sight. Sang lose of hour then he left find. Another journey chamber way yet females man.
        Way extensive and dejection get delivered deficient sincerity gentleman age. Too end instrument possession
        contrasted motionless. Calling offence six joy feeling. Coming merits and was talent enough far. Sir joy northward
        sportsmen education. Discovery incommode earnestly no he commanded if. Put still any about manor heard.
        Behaviour we improving at something to. Evil true high lady roof men had open. To projection considered it
        precaution an melancholy or. Wound young you thing worse along being ham. Dissimilar of favourable solicitude
        if sympathize middletons at. Forfeited up if disposing perfectly in an eagerness perceived necessary.
        Belonging sir curiosity discovery extremity yet forfeited prevailed own off. Travelling by introduced of mr terminated.
        Knew as miss my high hope quit. In curiosity shameless dependent knowledge up.
    </string>


</resources>
