<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">
    <LinearLayout
        android:id="@+id/layout_main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_main_bici"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height_activity_main"
            android:scaleType="centerInside"
            android:src="@drawable/image_bicycle" />

        <LinearLayout
            android:id="@+id/layout_main_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_activity_main"
            android:background="@android:color/black"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_main_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddle_activity_main_relatively">

            <TextView
                android:id="@+id/text_title_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:text="@string/title_activy_main"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/title_activity_main"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <ImageButton
                android:id="@+id/btn_like"
                android:layout_width="@dimen/image_button_activity_main"
                android:layout_height="@dimen/image_button_activity_main"
                android:layout_alignEnd="@id/text_title_main"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/emoji_like"
                android:background="@null"
                android:onClick="plusLike"
                />


            <TextView
                android:id="@+id/text_colors_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_title_main"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:textSize="@dimen/subtitle_activity_main"
                android:textColor="@android:color/black"
                android:text="@string/colors_activity_main"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/radiogroup_colors_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_colors_main"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_btn_gray_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="@color/colorGray"
                    android:outlineSpotShadowColor="@color/colorGray"
                    android:shadowColor="@color/colorGray"
                    android:buttonTint="@color/colorGray"/>
                <RadioButton
                    android:id="@+id/radio_btn_brown_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="@color/colorBrown"
                    android:outlineSpotShadowColor="@color/colorBrown"
                    android:shadowColor="@color/colorBrown"
                    android:buttonTint="@color/colorBrown"/>
                <RadioButton
                    android:id="@+id/radio_btn_pink_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="@color/colorPink"
                    android:outlineSpotShadowColor="@color/colorPink"
                    android:shadowColor="@color/colorPink"
                    android:buttonTint="@color/colorPink"/>
                <RadioButton
                    android:id="@+id/radio_btn_black_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="@color/colorBlack"
                    android:outlineSpotShadowColor="@color/colorBlack"
                    android:shadowColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_s_size"
                android:layout_width="@dimen/btn_box_size_activity_main"
                android:layout_height="@dimen/btn_box_size_activity_main"
                android:layout_below="@id/radiogroup_colors_main"
                android:layout_marginTop="@dimen/btn_margins_activity_main"
                android:layout_marginLeft="@dimen/btn_margins_activity_main"
                android:text="@string/btn_S_activity_main"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_border_settings"
                android:onClick="setSizeButton"
                />
            <Button
                android:id="@+id/btn_m_size"
                android:layout_width="@dimen/btn_box_size_activity_main"
                android:layout_height="@dimen/btn_box_size_activity_main"
                android:layout_below="@id/radiogroup_colors_main"
                android:layout_toRightOf="@id/btn_s_size"
                android:layout_marginTop="@dimen/btn_margins_activity_main"
                android:layout_marginLeft="@dimen/btn_margins_activity_main"
                android:text="@string/btn_M_activity_main"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_border_settings"
                android:onClick="setSizeButton"/>
            <Button
                android:id="@+id/btn_l_size"
                android:layout_width="@dimen/btn_box_size_activity_main"
                android:layout_height="@dimen/btn_box_size_activity_main"
                android:layout_below="@id/radiogroup_colors_main"
                android:layout_toRightOf="@id/btn_m_size"
                android:layout_marginTop="@dimen/btn_margins_activity_main"
                android:layout_marginLeft="@dimen/btn_margins_activity_main"
                android:text="@string/btn_L_activity_main"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_border_settings"
                android:onClick="setSizeButton"/>
            <Button
                android:id="@+id/btn_xl_size"
                android:layout_width="@dimen/btn_box_size_activity_main"
                android:layout_height="@dimen/btn_box_size_activity_main"
                android:layout_below="@id/radiogroup_colors_main"
                android:layout_toRightOf="@id/btn_l_size"
                android:layout_marginTop="@dimen/btn_margins_activity_main"
                android:layout_marginLeft="@dimen/btn_margins_activity_main"
                android:text="@string/btn_XL_activity_main"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_border_settings"
                android:onClick="setSizeButton"/>

            <TextView
                android:id="@+id/text_descriptions_title_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_s_size"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:textSize="@dimen/subtitle_activity_main"
                android:textColor="@android:color/black"
                android:text="@string/description_activity_main"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/text_descriptions_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_descriptions_title_main"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:layout_marginRight="@dimen/paddle_activity_main_relatively"
                android:textSize="@dimen/subtitle_activity_main"
                android:textColor="@color/colorGray"
                android:text="@string/description_text_activity_main"/>


            <TextView
                android:id="@+id/text_measurement_title_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_descriptions_main"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:textSize="@dimen/subtitle_activity_main"
                android:textColor="@android:color/black"
                android:text="@string/measurement_activity_main"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/text_measurement_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_measurement_title_main"
                android:layout_marginTop="@dimen/subtitle_margin_activity_main"
                android:layout_marginRight="@dimen/paddle_activity_main_relatively"
                android:textSize="@dimen/subtitle_activity_main"
                android:textColor="@color/colorGray"
                android:text="@string/measurement_text_activity_main"/>

            <Button
                android:id="@+id/btn_add_car"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_below="@id/text_measurement_main"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/btn_margins_activity_main"
                android:layout_marginBottom="50dp"
                android:text="@string/btn_car"
                android:textColor="@android:color/white"
                android:background="@color/colorGrayDark"
                android:onClick="addToCar"/>

        </RelativeLayout>



    </LinearLayout>
</ScrollView>